(ApiGateway) Improved Dockerfile build time (it seems, if it is slower revert it) (ProductStorage) added kafka communication to (Summary) with lazy_static global variable. (Summary) added kafka communication with (ProductStorage) with second thread. Quieter logs.